add csrf token to login

--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -11,6 +11,7 @@
                 </div>
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                   <form action="/login" method="POST">
+                    <input type="hidden" name="csrf_token" value="{{ .Csrf }}"/>
                     <!-- Email input -->
                     <div class="form-outline mb-4">
                       <input type="text" id="form3Example3" class="form-control form-control-lg"
