--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -13,8 +13,8 @@
 
                                     <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                                    <form class="mx-1 mx-md-4">
-
+                                    <form class="mx-1 mx-md-4" method="POST" action="/signup">
+                                        <input type="hidden" name="csrf_token" value="{{ .Csrf }}" />
                                         <div class="d-flex flex-row align-items-center mb-4">
                                             <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                             <div class="form-outline flex-fill mb-0">
